<resources>
    <string name="app_name">NetologyDiplom</string>
    <string name="hint_note_title">Название</string>
    <string name="hint_note_description">Описание</string>
    <string name="chb_deadline">есть дедлайн</string>
    <string name="Ok">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отменить</string>
    <string name="txt_enter_pass">Введите пароль</string>
    <string name="btn_save">Сохранить</string>
    <string name="settings_name">Настройки</string>
    <string name="main_name">Заметки</string>
    <string name="add_note_name">Заметка</string>
    <string name="msg_pass_error">Некорректное значение</string>
    <string name="msg_note_add_error">Необходимо ввести хотя бы одно значение</string>
    <string name="tv_enter_pass">Введите пароль</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_back">&#8592;</string>
    <string name="msg_pass_correct">Пароль верный</string>
    <string name="dialog_note_message_delete">Вы действительно хотите удалить существующую запись?</string>
    <string name="dialog_note_title_delete">Внимание</string>
    <string name="msg_back_pressed">Нажмите еще раз чтобы выйти</string>
</resources>
